# one-dto-mapper-rs

./: .gitignore  .gitlab-ci.yml  .taplo.toml  Cargo.toml  Makefile.toml  NOTICE  README.md
dto_mapper/: Cargo.toml
dto_mapper/examples/into_and_from/: complex.rs  rename.rs  replace.rs  simple.rs  skip_fields.rs  unwrap_or_value.rs  with_fn.rs
dto_mapper/examples/try_into_and_try_from/: replace.rs  simple.rs  unwrap_or_value.rs  with_fn.rs
dto_mapper/src/: lib.rs  traversable_result.rs
dto_mapper_derive/: Cargo.toml
dto_mapper_derive/src/: from.rs  lib.rs  try_from.rs  try_into.rs
dto_mapper_derive/src/common/: enums.rs
dto_mapper_derive/src/try_from/: fields.rs
dto_mapper_derive/src/try_into/: fields.rs
dto_mapper_derive/tests/: compilation.rs  conversion_tests.rs
dto_mapper_derive/tests/compile_fail/: enum_tuple.rs  enum_tuple.stderr  missing_attribute.rs  newtype_struct.rs  tuple_struct.rs  tuple_struct.stderr  unwrap_or_cant_be_used_with_with_fn.rs  with_fn_cant_use_both.rs
examples/: complex.rs  rename.rs  simple.rs  skip_fields.rs  unwrap_or_value.rs  with_fn.rs
examples/into_and_from/: complex.rs  main.rs  replace.rs  simple.rs  skip_fields.rs  unwrap_or_value.rs
examples/try_into_and_try_from/: complex.rs  rename.rs  simple.rs  skip_fields.rs
one-dto-mapper/: Cargo.toml
one-dto-mapper-derive/: Cargo.toml
one-dto-mapper-derive/src/: from.rs  into.rs  try_from.rs  try_into.rs
one-dto-mapper-derive/src/common/: fields.rs  mod.rs
one-dto-mapper-derive/src/from/: fields.rs
one-dto-mapper-derive/src/into/: fields.rs
one-dto-mapper-derive/src/try_into/: fields.rs
one-dto-mapper-derive/tests/: conversion_tests.rs
one-dto-mapper-derive/tests/compile_fail/: enum_tuple.rs  missing_attribute.rs  missing_attribute.stderr  newtype_struct.rs  tuple_struct.rs  unwrap_or_cant_be_used_with_with_fn.rs  unwrap_or_cant_be_used_with_with_fn.stderr  with_fn_cant_use_both.rs  with_fn_cant_use_both.stderr
one-dto-mapper/examples/into_and_from/: complex.rs  rename.rs  replace.rs  simple.rs  skip_fields.rs  unwrap_or_value.rs  with_fn.rs
one-dto-mapper/examples/try_into_and_try_from/: complex.rs  rename.rs  replace.rs  simple.rs  skip_fields.rs  unwrap_or_value.rs  with_fn.rs
one-dto-mapper/src/: lib.rs
src/: field_conversion_codegen.rs  from.rs  get_conversion_call.rs  lib.rs  try_from.rs  try_into.rs
src/codegen/: enums.rs  fields.rs  mod.rs  structs.rs
src/common/: enums.rs  mod.rs
src/from/: fields.rs
src/try_from/: fields.rs
src/try_into/: fields.rs
tests/: compilation.rs  conversion_tests.rs
tests/compile_fail/: enum_tuple.rs  missing_attribute.rs  missing_attribute.stderr  newtype_struct.rs  newtype_struct.stderr  tuple_struct.rs  unwrap_or_cant_be_used_with_into_and_from.rs  unwrap_or_cant_be_used_with_into_and_from.stderr  unwrap_or_cant_be_used_with_with_fn.rs  unwrap_or_cant_be_used_with_with_fn.stderr  unwrap_or_cant_use_both.rs  unwrap_or_cant_use_both.stderr  with_fn_cant_use_both.rs  with_fn_cant_use_both.stderr  wrong_unwrap_or_cant_be_used.rs  wrong_unwrap_or_cant_be_used.stderr
