[package]
name = "dto_mapper"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20.3" }
syn = { version = "2.0.39" }
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
itertools = { version = "0.12.0" }

[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }
