[package]
authors = ["Procivis"]
edition = "2021"
license = "Apache-2.0"
name    = "dto_mapper"
publish = true
version = "0.1.0"
description = "DTO mapper"
repository = "https://github.com/procivis/dto-mapper-rs"

[dependencies]
dto_mapper_derive = { version = "0.1.0", path = "../dto_mapper_derive" }
fmap              = { version = "0.8.3" }
