[package]
authors = ["Procivis"]
edition = "2021"
license = "Apache-2.0"
name    = "one-dto-mapper-derive"
publish = true
version = "0.1.8"
description = "One DTO mapper derive"
repository = "https://github.com/procivis/one-dto-mapper-rs"
documentation = "https://github.com/procivis/one-dto-mapper-rs"
exclude = [
    "tests/*",
    "tests/**/*",
]

[lib]
proc-macro = true

[dependencies]
darling     = { version = "0.20.10" }
proc-macro2 = { version = "1.0.86" }
quote       = { version = "1.0.37" }
syn         = { version = "2.0.77" }

[dev-dependencies]
trybuild = { version = "1.0.99", features = ["diff"] }
