[package]
authors = ["Procivis"]
edition = "2021"
license = "Apache-2.0"
name    = "one-dto-mapper"
publish = true
version = "0.1.7"
description = "One DTO mapper"
repository = "https://github.com/procivis/one-dto-mapper-rs"
documentation = "https://github.com/procivis/one-dto-mapper-rs"
exclude = [
    "examples/*",
    "examples/**/*",
]

[dependencies]
fmap                  = { version = "0.8.3" }
one-dto-mapper-derive = { version = "0.1.7", path = "../one-dto-mapper-derive" }
