[package]
authors       = ["Procivis"]
description   = "One DTO mapper"
documentation = "https://github.com/procivis/one-dto-mapper-rs"
edition       = "2021"
exclude       = ["examples/*", "examples/**/*"]
license       = "Apache-2.0"
name          = "one-dto-mapper"
publish       = true
repository    = "https://github.com/procivis/one-dto-mapper-rs"
version       = "0.1.10"

[dependencies]
fmap                  = { version = "0.8.3" }
one-dto-mapper-derive = { version = "0.1.10", path = "../one-dto-mapper-derive" }
